edit post and rebuild

--- a/posts/2025-04-08-20250408-144400.md
+++ b/posts/2025-04-08-20250408-144400.md
@@ -1,5 +1,5 @@
 ---
-title: "Fixed nvim typescript lsp errors"
+title: "Cursed vtsls errors in nvim"
 date: "2025-04-08 14:44:00"
 ---
 
@@ -9,3 +9,28 @@ I also enabled files for "astrocore" and "astrolsp" ([b2234c6](https://github.co
 I think it's all stuff that's been added while I've constantly just updated all my nvim stuff and that just flew under the radar.
 
 Everything works for now it seems, 24 hours will tell.
+
+**EDIT** 20 minutes later -
+
+These cursed errors are back. They appear to be all from `vtsls`. This is the one I see most often:
+
+```
+Debug Failure. False expression.\
+Error: Debug Failure. False expression.\
+    at computePositionOfLineAndCharacter (/home/trog/.local/share/nvim/mason/packages/vtsls/node_modules/@vtsls/language-server/node_modules/typescript/lib/typescript.js:11579:11)\
+    at TextStorage.lineOffsetToPosition (/home/trog/.local/share/nvim/mason/packages/vtsls/node_modules/@vtsls/language-server/node_modules/typescript/lib/typescript.js:185048:59)\
+    at ScriptInfo.lineOffsetToPosition (/home/trog/.local/share/nvim/mason/packages/vtsls/node_modules/@vtsls/language-server/node_modules/typescript/lib/typescript.js:185356:29)\
+    at IpcIOSession.getPosition (/home/trog/.local/share/nvim/mason/packages/vtsls/node_modules/@vtsls/language-server/node_modules/typescript/lib/typescript.js:194262:66)\
+    at IpcIOSession.getSignatureHelpItems (/home/trog/.local/share/nvim/mason/packages/vtsls/node_modules/@vtsls/language-server/node_modules/typescript/lib/typescript.js:194554:27)\
+    at signatureHelp (/home/trog/.local/share/nvim/mason/packages/vtsls/node_modules/@vtsls/language-server/node_modules/typescript/lib/typescript.js:192745:43)\
+    at /home/trog/.local/share/nvim/mason/packages/vtsls/node_modules/@vtsls/language-server/node_modules/typescript/lib/typescript.js:195218:15\
+    at IpcIOSession.executeWithRequestId (/home/trog/.local/share/nvim/mason/packages/vtsls/node_modules/@vtsls/language-server/node_modules/typescript/lib/typescript.js:195207:14)\
+    at IpcIOSession.executeCommand (/home/trog/.local/share/nvim/mason/packages/vtsls/node_modules/@vtsls/language-server/node_modules/typescript/lib/typescript.js:195216:29)\
+    at IpcIOSession.onMessage (/home/trog/.local/share/nvim/mason/packages/vtsls/node_modules/@vtsls/language-server/node_modules/typescript/lib/typescript.js:195264:68)\
+    at process.<anonymous> (/home/trog/.local/share/nvim/mason/packages/vtsls/node_modules/@vtsls/language-server/node_modules/typescript/lib/_tsserver.js:525:14)\
+    at process.emit (node:events:507:28)\
+    at emit (node:internal/child_process:949:14)\
+    at process.processTicksAndRejections (node:internal/process/task_queues:91:21)"
+```
+
+I am working through this for now but will mess with this garbage tonight -\_-
