final update and rebuild for this post

--- a/posts/2025-04-08-20250408-144400.md
+++ b/posts/2025-04-08-20250408-144400.md
@@ -10,6 +10,8 @@ I think it's all stuff that's been added while I've constantly just updated all 
 
 Everything works for now it seems, 24 hours will tell.
 
+---
+
 **EDIT** 20 minutes later -
 
 These cursed errors are back. They appear to be all from `vtsls`. This is the one I see most often:
@@ -34,3 +36,38 @@ Error: Debug Failure. False expression.\
 ```
 
 I am working through this for now but will mess with this garbage tonight -\_-
+
+---
+
+**EDIT 2**
+
+Switching to `ts_ls` (typescript-language-server) throw this error now:
+
+```
+Debug Failure. False expression.\
+Error: Debug Failure. False expression.\
+    at computePositionOfLineAndCharacter (/home/trog/github.com/rconjoe/bigtonka/node_modules/typescript/lib/typescript.js:11676:11)\
+    at TextStorage.lineOffsetToPosition (/home/trog/github.com/rconjoe/bigtonka/node_modules/typescript/lib/typescript.js:185507:59)\
+    at ScriptInfo.lineOffsetToPosition (/home/trog/github.com/rconjoe/bigtonka/node_modules/typescript/lib/typescript.js:185815:29)\
+    at IpcIOSession.getPosition (/home/trog/github.com/rconjoe/bigtonka/node_modules/typescript/lib/typescript.js:194721:66)\
+    at IpcIOSession.getSignatureHelpItems (/home/trog/github.com/rconjoe/bigtonka/node_modules/typescript/lib/typescript.js:195013:27)\
+    at signatureHelp (/home/trog/github.com/rconjoe/bigtonka/node_modules/typescript/lib/typescript.js:193204:43)\
+    at /home/trog/github.com/rconjoe/bigtonka/node_modules/typescript/lib/typescript.js:195676:15\
+    at IpcIOSession.executeWithRequestId (/home/trog/github.com/rconjoe/bigtonka/node_modules/typescript/lib/typescript.js:195665:14)\
+    at IpcIOSession.executeCommand (/home/trog/github.com/rconjoe/bigtonka/node_modules/typescript/lib/typescript.js:195674:29)\
+    at IpcIOSession.onMessage (/home/trog/github.com/rconjoe/bigtonka/node_modules/typescript/lib/typescript.js:195722:68)\
+    at process.<anonymous> (/home/trog/github.com/rconjoe/bigtonka/node_modules/typescript/lib/_tsserver.js:519:14)\
+    at process.emit (node:events:507:28)\
+    at emit (node:internal/child_process:949:14)\
+    at process.processTicksAndRejections (node:internal/process/task_queues:91:21)"
+```
+
+So this at least points me towards seeing what unholy terror grepping the logs for `computePositionOfLineAndCharacter` will yield.
+
+Not much it seems, but the search results for stuff related to this are...barren.
+
+https://github.com/LazyVim/LazyVim/issues/3465 may be relevant.
+
+Apparently there is a way to suppress a given string pattern from coming thru on those notis in the vim console. Will have to check it out, or, nuke the setup and see what we find.
+
+Charming stuff. Will follow up in a future post.
