--- a/posts/2025-05-16-20250516-032605.md
+++ b/posts/2025-05-16-20250516-032605.md
@@ -5,7 +5,7 @@ date: "2025-05-16 03:26:05"
 
 I am not a math guy. But some papers I have read recently have me deciphering math notation I don't understand and trying to get a handle of statistics. Parsing CS demos into useable data en masse has become my new latest project.
 
-Many papers on this topic have been written by Peter Xenopolous. Most of them are within the context of CS:GO, and I am deeply motivated to replicate as much of his research as I can in CS2.
+Many papers on this topic have been written by [Peter Xenopolous](https://scholar.google.com/citations?user=F-JeV_kAAAAJ&hl=en). Most of them are within the context of CS:GO, and I am deeply motivated to replicate as much of his research as I can in CS2.
 
 <img src="../images/awpy-arch.png" width=800 alt="cs demo architecture" />
 
