--- a/posts/2025-07-16-20250716-081754.md
+++ b/posts/2025-07-16-20250716-081754.md
@@ -27,3 +27,5 @@ Some important things I want to remember today:
 - <a href="https://www.electricvelocitypnw.com/product/kelly-programming-cable">4-pin JST to USB cable</a> (for serial connection to PC)
 
 I have to use something like nRF Connect to sniff the services on the BLE adapter. It is translating the BLE messages into serial messages on the RS232 protocol. I think sniffing this is a lot easier than trying to log and reverse-engineer the serial protocol itself. I do have documentation on the CAN protocol, but this doesn't help me at all for making a mobile app to configure the controller. If the bike already has working BLE communication to the controller, sniffing and finding patterns in the messages when inputting or reading configuration values is the next step.
+
+If deciphering the BLE messages is too difficult, I plan to purchase the JST to USB cable and log those signals on a PC.
