restructure kelly posts

--- a/posts/2025-07-16-20250716-081754.md
+++ b/posts/2025-07-16-20250716-081754.md
@@ -1,5 +1,5 @@
 ---
-title: "BLE sniffing a Kelly DC controller"
+title: "Onyx Kelly KLS7230S Superpost"
 date: "2025-07-16 08:17:54"
 ---
 
@@ -29,3 +29,13 @@ Some important things I want to remember today:
 I have to use something like nRF Connect to sniff the services on the BLE adapter. It is translating the BLE messages into serial messages on the RS232 protocol. I think sniffing this is a lot easier than trying to log and reverse-engineer the serial protocol itself. I do have documentation on the CAN protocol, but this doesn't help me at all for making a mobile app to configure the controller. If the bike already has working BLE communication to the controller, sniffing and finding patterns in the messages when inputting or reading configuration values is the next step.
 
 If deciphering the BLE messages is too difficult, I plan to purchase the JST to USB cable and log those signals on a PC.
+
+UPDATE 07/16/25:
+
+What I did so far today was to take an Android device, put it in developer mode, and enable BT HCI logging while I use the AC Aduser app to execute commands on the Kelly controller. I then used `adb` to retrieve the logs and open them in Wireshark on my PC.
+
+They came in as a `.cfa` file, which I don't know anything about, however Wireshark opened it just fine and exposed a bunch of Bluetooth RCOMM and SPP packets worth investigating.
+
+UPDATE 07/27/25:
+
+I have converted this initial post about BLE HCI snooping the AC Aduser app into a superpost that I will keep updating however long this goes on for.
