--- a/posts/2026-02-22-20260222-015955.md
+++ b/posts/2026-02-22-20260222-015955.md
@@ -3,7 +3,7 @@ title: "RCR 80V Black Box (part 1)"
 date: "2026-02-22 01:59:55"
 ---
 
-I intend to detail in a later post my journey from enthusiastic [ONYX](https://onyxmotors.com) rider to service director for the entire company. For today, I hope to resurrect this blog with some planning details for a black box I am building to help reverse-engineer useful diagnostic information from the bike.
+I intend to detail in a later post my journey from enthusiastic [ONYX](https://onyxmotors.com) rider to service manager for the entire company. For today, I hope to resurrect this blog with some planning details for a black box I am building to help reverse-engineer useful diagnostic information from the bike.
 
 # Preliminary
 
