--- a/posts/2025-07-16-20250716-081754.md
+++ b/posts/2025-07-16-20250716-081754.md
@@ -13,7 +13,7 @@ These bikes use a Kelly Controllers KLS7230S, which in oversimplified terms, act
 Another common need is to monitor values from a BMS (Battery Management System), such as individual cell voltages or temperature sensors. This is more difficult to pin down, as there is a greater variety of BMS chips installed in aftermarket batteries, a common RCR modification. However, all of the stock batteries ship with the same BMS.
 
 <img src="../images/rcrguts.jpg" alt="RCR guts" width=800 />
-<i>The guts of one of my earlier RCR's. The Kelly KLS7230S is visible mounted on the bottom of the battery tray. Dominating the top half of the frame is an (aftermarket) 60ah 72v battery pack, consisting of over 160 Li-ion 21700 cells.</i>
+<i>The guts of one of my earlier RCR's. The Kelly KLS7230S is visible mounted on the bottom of the battery tray. Dominating the top half of the frame is an (aftermarket) 60ah 72v battery pack, 20 series of Samsung 50s Li-ion 18650 cells.</i>
 
 I have offered my time to Onyx Motors to investigate the feasability of shipping a first-party mobile application for free with the bike, to manage both controller configuration and BMS monitoring.
 
