--- a/posts/2026-02-22-20260222-015955.md
+++ b/posts/2026-02-22-20260222-015955.md
@@ -7,7 +7,7 @@ I intend to detail in a later post my journey from enthusiastic [ONYX](https://o
 
 # Preliminary
 
-The 80v RCR is a bike I work on daily. The developer contracted with our company who makes the controller software is not willing to share an API or any documentation with me. So, I am preparing to sniff the existing "programming" leads with a logic analyzer to write my own scripts to dump whatever serial data I can find. From there I will begin the arduous process of decoding these bits into usable information.
+The 80v RCR is a bike I work on daily. The developer contracted with our company who makes the controller software is not willing to share an API or any documentation with me (which is his right). So, I am preparing to sniff the existing "programming" leads with a logic analyzer to write my own scripts to dump whatever serial data I can find. From there I will begin the arduous process of decoding these bits into usable information.
 
 **The goal is a plug-and-play system that records unified diagnostics in real time.**
 
